<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/bottom_sheet_peek_height">

        <TextView
            android:id="@+id/poseReferenceCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/pose_reference_total_default"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/poseReferenceList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/settingsButtons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/poseReferenceCount" />

        <TextView
            android:id="@+id/tvPlaceholder"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:padding="32dp"
            android:text="@string/tv_gallery_placeholder"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/poseReferenceList"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/poseReferenceCount" />

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:indeterminate="true"
            android:theme="@style/AppThemeProgressStyle"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/poseReferenceList"
            app:layout_constraintEnd_toEndOf="@id/poseReferenceList"
            app:layout_constraintStart_toStartOf="@id/poseReferenceList"
            app:layout_constraintTop_toTopOf="@id/poseReferenceList" />

        <LinearLayout
            android:id="@+id/settingsButtons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#66000000"
            android:orientation="vertical"
            android:padding="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/btnBluetooth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Bluetooth Pairing" />

            <Button
                android:id="@+id/btnViewPasswords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="View Saved Passwords" />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabGetContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:backgroundTint="@color/mp_color_primary"
            android:contentDescription="@string/add_pose_reference"
            android:src="@drawable/ic_baseline_add_24"
            app:layout_constraintBottom_toTopOf="@id/settingsButtons"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@android:color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/bottom_sheet_layout"
        layout="@layout/info_bottom_sheet" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>